Bug #51204
cephfs-mirror: false warning of "keyring not found" seen in cephfs-mirror service status is misleading
% Done:
0%
Source:
Q/A
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
2021-06-10T14:20:38.574+0000 7f3705e5ff80 1 mgrc service_daemon_register cephfs-mirror.89220 metadata {arch=x86_64,ceph_release=pacific,ceph_version=ceph version 16.2.0-6> 2021-06-10T14:26:48.670+0000 7f36f35c4700 0 cephfs::mirror::PeerReplayer(2deceefc-96f7-42c0-8ca0-629d6df4889b) init: remote monitor host=[...] 2021-06-10T14:26:48.673+0000 7f36f35c4700 -1 auth: unable to find a keyring on /etc/ceph/..keyring,/etc/ceph/.keyring,/etc/ceph/keyring,/etc/ceph/keyring.bin,: (2) No such file > 2021-06-10T14:26:48.674+0000 7f36f35c4700 -1 auth: unable to find a keyring on /etc/ceph/..keyring,/etc/ceph/.keyring,/etc/ceph/keyring,/etc/ceph/keyring.bin,: (2) No such file > 2021-06-10T14:26:48.674+0000 7f36f35c4700 -1 auth: unable to find a keyring on /etc/ceph/..keyring,/etc/ceph/.keyring,/etc/ceph/keyring,/etc/ceph/keyring.bin,: (2) No such file >
Warnings seen in (systemctl) logs when using bootstrap import. Ceph tries to search (and read) the cluster configuration file (for remote cluster) and spits out the warning when its not found. However, this is not a problem since the mirror daemon can connect to the cluster via mon addr. So, these log warnings need to be silenced.
Related issues
History
#1 Updated by Venky Shankar over 2 years ago
- Status changed from New to In Progress
#2 Updated by Venky Shankar over 2 years ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 41833
#3 Updated by Patrick Donnelly over 2 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Backport Bot over 2 years ago
- Copied to Backport #51284: pacific: cephfs-mirror: false warning of "keyring not found" seen in cephfs-mirror service status is misleading added
#5 Updated by Loïc Dachary over 2 years ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".