cephfs-mirror: silence warnings when connecting via mon host

When connecting to remote cluster via mon address, the cluster
confuration file is not required. However, the mirror daemon
fills up the ceph context with the cluster name resulting in
the following warning in (systemctl) logs:

    auth: unable to find a keyring on ...

These warning messages need to be silence as they can mislead
the user.

Fixes: http://tracker.ceph.com/issues/51204
Signed-off-by: Venky Shankar <vshankar@redhat.com>